compiler/testData/diagnostics/testsWithStdLib/annotations/jvmStatic/constructorProperty.kt
// !LANGUAGE: -JvmStaticInInterface
class A(<!JVM_STATIC_NOT_IN_OBJECT_OR_CLASS_COMPANION!>@JvmStatic val z: Int<!>) {

}